# singularity

./: Cargo.toml  DEVLOG.md  LICENSE  README.md  debug.sh  debug_script.sh  flake.nix  shell.nix  wc.sh
examples/: placeholder_executable.py  placeholder_executable.sh
examples/project/: file_to_edit.txt  file_to_edit.txt.temp1723411225245  lorem_ipsum.txt.temp1724369025270
examples/project/.project/: tasks.json
examples/root-project/: file_to_edit.txt  lorem_ipsum.txt
examples/root-project/.project/: blocks.json  core.json  tasks.json
singularity/: Cargo.toml
singularity/src/: lib.rs
singularity_common/: Cargo.toml
singularity_common/singularity_macros/: Cargo.toml
singularity_common/singularity_macros/src/: lib.rs
singularity_common/src/: lib.rs  macro_reexports.rs  tests.rs
singularity_common/src/components/: button.rs  mod.rs  text_box.rs  timer.rs  timer_widget.rs  tree_viewer.rs
singularity_common/src/elements/: mod.rs  text_box.rs
singularity_common/src/project/: mod.rs  project_settings.rs
singularity_common/src/sap/: byte_stream.rs  mod.rs  packet.rs  standard_features.rs  universal_packet.rs
singularity_common/src/subapp/: dynamic_loader.rs  mod.rs  temp_interface.rs  unix_socket_subapp_interface.rs
singularity_common/src/subapp_handler/: executable_subapp_handler.rs  ipc_subapp_handler.rs  mod.rs
singularity_common/src/tab/: mod.rs  packets.rs  temp_tab.rs  tile.rs
singularity_common/src/utils/: id_map.rs  mod.rs  object_stream.rs  timer.rs
singularity_common/src/utils/tree/: id_tree.rs  mod.rs  recursive_tree.rs  tree_node_path.rs  uuid_tree.rs
singularity_common/tests/: macro_demo.rs  sap_connection_test.rs  sap_macro_test.rs
singularity_manager/: Cargo.toml
singularity_manager/src/: demo_from_winit.rs  main.rs  tests.rs
singularity_manager/src/project_manager/: mod.rs  tabs.rs
singularity_manager/src/subapp/: mod.rs
singularity_standard_tabs/: Cargo.toml
singularity_standard_tabs/src/: demo.rs  editor.rs  file_manager.rs  lib.rs  task_organizer.rs
singularity_standard_tabs/src/time_manager/: mod.rs
singularity_subapps/dylib_demo/: Cargo.toml
singularity_subapps/dylib_demo/src/: lib.rs
singularity_subapps/singularity_standard_subapps/: Cargo.toml  demo.rs  editor.rs  file_manager.rs
singularity_ui/: Cargo.toml
singularity_ui/examples/: ab_glyph_demo.rs  demo.rs  ocl_demo.rs  shader.cl
singularity_ui/src/: color.rs  demo.rs  display_units.rs  egui_backend.rs  iced_backend.rs  lib.rs  task_logger.rs  test.rs  ui_element.rs  wayland_backend.rs
src/: demo_cli_frontend.rs  main.rs  tests.rs
src/backend/utils/: mod.rs  recursive_tree.rs  rooted_tree.rs  tree_node_path.rs
src/block/: mod.rs
src/elements/: mod.rs  text_box.rs
src/manager/: mod.rs
src/project/: mod.rs  project_settings.rs
src/project_manager/: mod.rs
src/subapp/: mod.rs  std_subapps.rs
src/subapp/std_subapps/: editor.rs  file_manager.rs  mod.rs  task_organizer.rs
testing/: Cargo.toml  flake.nix
testing/src/: main.rs
usock_demo/: Cargo.toml
usock_demo/src/: bytes_stream.rs  connection.rs  lib.rs
