[workspace]
members = [
    "singularity_common",
    "singularity_manager",
    "singularity_standard_tabs",
    "singularity_ui",
]
resolver = "2"
exclude = ["testing"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"

# [[members]]
# singularity_ui = { features = ["iced_backend"] }
