[workspace]
members = [
    "singularity_common",
    "singularity_common/singularity_macros",
    "singularity_manager",
    "singularity_standard_tabs",
    "singularity_ui",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^1.10.0", features = ["v4"] }

# [[members]]
# singularity_ui = { features = ["iced_backend"] }
