[package]
name = "singularity_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

singularity_common = { path = "../singularity_common" }
singularity_standard_tabs = { path = "../singularity_standard_tabs" }
