[package]
name = "singularity_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
singularity_common = { path = "../singularity_common" }
singularity_standard_tabs = { path = "../singularity_standard_tabs" }
singularity_ui = { path = "../singularity_ui" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
