[package]
name = "singularity_standard_tabs"
version = "0.1.0"
edition = "2021"

[dependencies]
singularity_common = { path = "../singularity_common" }
singularity_macros = { path = "../singularity_common/singularity_macros" }
singularity_ui = { path = "../singularity_ui" }

serde = { workspace = true }
serde_json = { workspace = true }

# [[bin]]
# name = "editor"
# path = "editor.rs"

# [[bin]]
# name = "file_manager"
# path = "file_manager.rs"

# [[bin]]
# name = "task_organizer"
# path = "task_organizer.rs"

# [[bin]]
# name = "demo"
# path = "demo.rs"

[[test]]
name = "demo"
path = "src/demo.rs"
