[package]
name = "singularity_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "^0.28", optional = true }
eframe = { version = "^0.28", optional = true }
winit = { version = "^0.29", optional = true }
# iced = "0.12"
wayland-client = { version = "^0.31", optional = true }
wayland-protocols = { version = "^0.32", features = [
    "client",
], optional = true }
smithay-client-toolkit = { version = "^0.19", optional = true }
raqote = { version = "^0.8", optional = true }
font-kit = { version = "^0.11.0", optional = true }


[features]
default = ["wayland_backend"]
iced_backend = []
wayland_backend = [
    "wayland-client",
    "wayland-protocols",
    "smithay-client-toolkit",
    "raqote",
    "font-kit",
]
egui_backend = ["egui", "eframe", "winit"]

[dev-dependencies]
env_logger = "^0.10"
font-kit = "^0.11.0"
raqote = "^0.8.2"
bytemuck = "^1.13.0"


# image = "0.24"
# wgpu = "0.19.0"
# raw-window-handle = "0.6.0"
# futures-channel = "^0.3.16"
# futures-util = "^0.3"
# tempfile = "^3.2"
# bytemuck = "1.13.0"
# drm-fourcc = "2.2.0"
# font-kit = "0.11.0"
# image = "0.24"
# env_logger = "0.10"
# wgpu = "0.19.0"
# raqote = "0.8.2"
# raw-window-handle = "0.6.0"
# pollster = "0.3.0"
