[package]
name = "singularity_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = { version = "^0.31", optional = true }
wayland-protocols = { version = "^0.32", features = [
    "client",
], optional = true }
smithay-client-toolkit = { version = "^0.19", optional = true }
raqote = { version = "^0.8", optional = true }
font-kit = { version = "^0.11.0", optional = true }


[features]
default = ["wayland_backend"]
wayland_backend = [
    "wayland-client",
    "wayland-protocols",
    "smithay-client-toolkit",
    "raqote",
    "font-kit",
]
