[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "^0.31"
# wayland-protocols = { version = "^0.31", features = ["client"] }
# tempfile = "3.2"
# winit = "^0.30"
smithay-client-toolkit = "^0.19"
env_logger = "^0.10"
image = "^0.24"
# wgpu = "^0.19.0"
# raw-window-handle = "^0.6.0"
# pollster = "^0.3.0"
xkeysym = "^0.2.0"

# [dev-dependencies]
# bytemuck = "1.13.0"
# drm-fourcc = "2.2.0"
# font-kit = "0.11.0"
# image = "0.24"
# env_logger = "0.10"
# wgpu = "0.19.0"
# raqote = "0.8.2"
# raw-window-handle = "0.6.0"
# pollster = "0.3.0"
